--- a/dataproject/Lasse/Project1.ipynb
+++ b/dataproject/Lasse/Project1.ipynb
@@ -2,6 +2,261 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File does not exists\n",
+      "     tourney_id     tourney_name surface draw_size  winner_ht  winner_age  \\\n",
+      "0      2008-338           Sydney    Hard        32      185.0   21.555099   \n",
+      "1      2008-338           Sydney    Hard        32      185.0   25.070500   \n",
+      "2      2008-338           Sydney    Hard        32      175.0   29.609856   \n",
+      "3      2008-338           Sydney    Hard        32      188.0   24.145106   \n",
+      "4      2008-338           Sydney    Hard        32      178.0   35.077344   \n",
+      "5      2008-338           Sydney    Hard        32      178.0   23.819302   \n",
+      "6      2008-338           Sydney    Hard        32      183.0   23.630390   \n",
+      "7      2008-338           Sydney    Hard        32      185.0   19.895962   \n",
+      "8      2008-338           Sydney    Hard        32      180.0   26.866530   \n",
+      "9      2008-338           Sydney    Hard        32      201.0   22.439425   \n",
+      "10     2008-338           Sydney    Hard        32      183.0   23.028063   \n",
+      "11     2008-338           Sydney    Hard        32      196.0   22.305270   \n",
+      "12     2008-338           Sydney    Hard        32      190.0   31.362081   \n",
+      "13     2008-338           Sydney    Hard        32      183.0   31.312799   \n",
+      "14     2008-338           Sydney    Hard        32      190.0   23.876797   \n",
+      "15     2008-338           Sydney    Hard        32      185.0   29.111567   \n",
+      "16     2008-338           Sydney    Hard        32      185.0   25.070500   \n",
+      "17     2008-338           Sydney    Hard        32      175.0   29.609856   \n",
+      "18     2008-338           Sydney    Hard        32      178.0   35.077344   \n",
+      "19     2008-338           Sydney    Hard        32      185.0   19.895962   \n",
+      "20     2008-338           Sydney    Hard        32      201.0   22.439425   \n",
+      "21     2008-338           Sydney    Hard        32      196.0   22.305270   \n",
+      "22     2008-338           Sydney    Hard        32      183.0   31.312799   \n",
+      "23     2008-338           Sydney    Hard        32      185.0   29.111567   \n",
+      "24     2008-338           Sydney    Hard        32      185.0   25.070500   \n",
+      "25     2008-338           Sydney    Hard        32      178.0   35.077344   \n",
+      "26     2008-338           Sydney    Hard        32      201.0   22.439425   \n",
+      "27     2008-338           Sydney    Hard        32      185.0   29.111567   \n",
+      "28     2008-338           Sydney    Hard        32      185.0   25.070500   \n",
+      "29     2008-338           Sydney    Hard        32      201.0   22.439425   \n",
+      "...         ...              ...     ...       ...        ...         ...   \n",
+      "2555   2014-440  s-Hertogenbosch   Grass        32        NaN   20.950034   \n",
+      "2556   2014-440  s-Hertogenbosch   Grass        32      193.0   25.738535   \n",
+      "2557   2014-440  s-Hertogenbosch   Grass        32      185.0   31.509925   \n",
+      "2558   2014-440  s-Hertogenbosch   Grass        32      178.0   32.999316   \n",
+      "2559   2014-440  s-Hertogenbosch   Grass        32      175.0   29.199179   \n",
+      "2560   2014-440  s-Hertogenbosch   Grass        32        NaN   24.142368   \n",
+      "2561   2014-440  s-Hertogenbosch   Grass        32      193.0   23.980835   \n",
+      "2562   2014-440  s-Hertogenbosch   Grass        32      190.0   32.399726   \n",
+      "2563   2014-440  s-Hertogenbosch   Grass        32      188.0   24.476386   \n",
+      "2564   2014-440  s-Hertogenbosch   Grass        32      188.0   26.554415   \n",
+      "2565   2014-440  s-Hertogenbosch   Grass        32        NaN   26.171116   \n",
+      "2566   2014-440  s-Hertogenbosch   Grass        32      183.0   33.067762   \n",
+      "2567   2014-440  s-Hertogenbosch   Grass        32      185.0   26.617385   \n",
+      "2568   2014-440  s-Hertogenbosch   Grass        32      188.0   28.692676   \n",
+      "2569   2014-440  s-Hertogenbosch   Grass        32      188.0   30.584531   \n",
+      "2570   2014-440  s-Hertogenbosch   Grass        32        NaN   25.212868   \n",
+      "2571   2014-440  s-Hertogenbosch   Grass        32      193.0   25.738535   \n",
+      "2572   2014-440  s-Hertogenbosch   Grass        32      178.0   32.999316   \n",
+      "2573   2014-440  s-Hertogenbosch   Grass        32      193.0   23.980835   \n",
+      "2574   2014-440  s-Hertogenbosch   Grass        32      190.0   32.399726   \n",
+      "2575   2014-440  s-Hertogenbosch   Grass        32        NaN   26.171116   \n",
+      "2576   2014-440  s-Hertogenbosch   Grass        32      183.0   33.067762   \n",
+      "2577   2014-440  s-Hertogenbosch   Grass        32      188.0   30.584531   \n",
+      "2578   2014-440  s-Hertogenbosch   Grass        32        NaN   25.212868   \n",
+      "2579   2014-440  s-Hertogenbosch   Grass        32      178.0   32.999316   \n",
+      "2580   2014-440  s-Hertogenbosch   Grass        32        NaN   26.171116   \n",
+      "2581   2014-440  s-Hertogenbosch   Grass        32      183.0   33.067762   \n",
+      "2582   2014-440  s-Hertogenbosch   Grass        32      178.0   32.999316   \n",
+      "2583   2014-440  s-Hertogenbosch   Grass        32        NaN   26.171116   \n",
+      "2584   2014-440  s-Hertogenbosch   Grass        32        NaN   26.171116   \n",
+      "\n",
+      "      winner_rank  winner_rank_points  \n",
+      "0             8.0              1930.0  \n",
+      "1            35.0               853.0  \n",
+      "2            51.0               621.0  \n",
+      "3            27.0              1050.0  \n",
+      "4            37.0               792.0  \n",
+      "5            88.0               474.0  \n",
+      "6           102.0               425.0  \n",
+      "7            82.0               492.0  \n",
+      "8            21.0              1385.0  \n",
+      "9           125.0               357.0  \n",
+      "10           30.0               955.0  \n",
+      "11           14.0              1685.0  \n",
+      "12           18.0              1585.0  \n",
+      "13           40.0               735.0  \n",
+      "14           47.0               659.0  \n",
+      "15           32.0               930.0  \n",
+      "16           35.0               853.0  \n",
+      "17           51.0               621.0  \n",
+      "18           37.0               792.0  \n",
+      "19           82.0               492.0  \n",
+      "20          125.0               357.0  \n",
+      "21           14.0              1685.0  \n",
+      "22           40.0               735.0  \n",
+      "23           32.0               930.0  \n",
+      "24           35.0               853.0  \n",
+      "25           37.0               792.0  \n",
+      "26          125.0               357.0  \n",
+      "27           32.0               930.0  \n",
+      "28           35.0               853.0  \n",
+      "29          125.0               357.0  \n",
+      "...           ...                 ...  \n",
+      "2555        475.0                79.0  \n",
+      "2556        143.0               405.0  \n",
+      "2557         32.0              1200.0  \n",
+      "2558         83.0               653.0  \n",
+      "2559        107.0               541.0  \n",
+      "2560         65.0               763.0  \n",
+      "2561         35.0              1145.0  \n",
+      "2562         41.0              1077.0  \n",
+      "2563         68.0               722.0  \n",
+      "2564         86.0               618.0  \n",
+      "2565         28.0              1375.0  \n",
+      "2566         52.0               860.0  \n",
+      "2567         87.0               617.0  \n",
+      "2568        146.0               400.0  \n",
+      "2569         23.0              1555.0  \n",
+      "2570         48.0               944.0  \n",
+      "2571        143.0               405.0  \n",
+      "2572         83.0               653.0  \n",
+      "2573         35.0              1145.0  \n",
+      "2574         41.0              1077.0  \n",
+      "2575         28.0              1375.0  \n",
+      "2576         52.0               860.0  \n",
+      "2577         23.0              1555.0  \n",
+      "2578         48.0               944.0  \n",
+      "2579         83.0               653.0  \n",
+      "2580         28.0              1375.0  \n",
+      "2581         52.0               860.0  \n",
+      "2582         83.0               653.0  \n",
+      "2583         28.0              1375.0  \n",
+      "2584         28.0              1375.0  \n",
+      "\n",
+      "[47337 rows x 8 columns]\n",
+      "          winner_ht    winner_age   winner_rank  winner_rank_points\n",
+      "count  46403.000000  47248.000000  46642.000000        46642.000000\n",
+      "mean     175.621188     27.313285     57.918485         1473.355066\n",
+      "std       42.048744      7.807148     71.089303         1922.592447\n",
+      "min        1.000000      4.000000      1.000000            1.000000\n",
+      "25%      180.000000     23.594798     18.000000          525.000000\n",
+      "50%      185.000000     26.182067     41.000000          880.000000\n",
+      "75%      190.000000     28.933607     75.000000         1575.000000\n",
+      "max      208.000000    147.000000   1890.000000        15785.000000\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:            winner_rank   R-squared:                       0.005\n",
+      "Model:                            OLS   Adj. R-squared:                  0.005\n",
+      "Method:                 Least Squares   F-statistic:                     111.5\n",
+      "Date:                Tue, 26 Mar 2019   Prob (F-statistic):           5.09e-49\n",
+      "Time:                        17:14:47   Log-Likelihood:            -2.5709e+05\n",
+      "No. Observations:               45799   AIC:                         5.142e+05\n",
+      "Df Residuals:                   45796   BIC:                         5.142e+05\n",
+      "Df Model:                           2                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "Intercept     20.8716      2.971      7.024      0.000      15.048      26.696\n",
+      "winner_age     0.3672      0.054      6.853      0.000       0.262       0.472\n",
+      "winner_ht      0.1437      0.010     14.387      0.000       0.124       0.163\n",
+      "==============================================================================\n",
+      "Omnibus:                    48050.584   Durbin-Watson:                   1.677\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):          5225269.743\n",
+      "Skew:                           5.132   Prob(JB):                         0.00\n",
+      "Kurtosis:                      54.311   Cond. No.                     1.75e+03\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 1.75e+03. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x550 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf\n",
+    "\n",
+    "from pandas import DataFrame as df\n",
+    "from scipy.stats import trim_mean, kurtosis\n",
+    "from scipy.stats.mstats import mode, gmean, hmean\n",
+    "os.chdir(\"/Users/LasseLindberg/Desktop/OneDrive - Københavns Universitet/Københavnsuniversitet/Økonomi/Kandidat/8. Semester/Introduction to programming and numerical analysis/projects-2019-ccl/dataproject/Dataset/atp-matches-dataset/\")\n",
+    "\n",
+    "#hvis filen vi danner i forvejen findes slettes den så der kan køres en ny\n",
+    "if os.path.exists(\"Tennis_mod.csv\"):\n",
+    "    os.remove(\"Tennis_mod.csv\")\n",
+    "else:\n",
+    "    print('File does not exists')\n",
+    "\n",
+    "#alle filer med format csv medtages og samles i tennis_total\n",
+    "extension = 'csv'\n",
+    "all_filenames = [i for i in glob.glob('*.{}'.format(extension))]\n",
+    "Tennis_total = pd.concat([pd.read_csv(f) for f in all_filenames ])\n",
+    "\n",
+    "#Vælger hvilke kolonner i tennis_total vi vil have med og danner det endelige dataset Tennis_mod\n",
+    "keep_col = ['tourney_id','tourney_name','surface','draw_size','winner_ht', 'winner_age', 'winner_rank', 'winner_rank_points'] \n",
+    "Tennis_mod=Tennis_total[keep_col]\n",
+    "\n",
+    "filter = Tennis_mod[\"tourney_id\"] != \"\"\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"tourney_name\"] != \"\"\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"surface\"] != \"\"\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"draw_size\"] != 0\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"winner_ht\"] != 0\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"winner_age\"] != 0\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"winner_rank\"] != 0\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"winner_rank_points\"] != 0\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "\n",
+    "\n",
+    "\n",
+    "#Laver tennis_mod til csv som gemmes i samme mappe med stien\n",
+    "Tennis_mod.to_csv( \"Tennis_mod.csv\", index=False, encoding='utf-8-sig')\n",
+    "\n",
+    "\n",
+    "#et stk. printet samlet tabel\n",
+    "print(Tennis_mod)\n",
+    "\n",
+    "#et stk. deskriptiv analyse\n",
+    "DataDescribe=Tennis_mod.describe()\n",
+    "print(DataDescribe)\n",
+    "\n",
+    "#et stk. OLS\n",
+    "results = smf.ols('winner_rank ~ winner_age + winner_ht', data=Tennis_mod).fit()\n",
+    "print(results.summary())\n",
+    "\n",
+    "#et stk. plot\n",
+    "plt.style.use('seaborn')\n",
+    "Tennis_mod.plot(x='winner_rank_points', y='winner_rank', kind='scatter')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
