Hej bøsserøve jeg har ændret lidt

--- a/dataproject/Offer/Aflevering 1_Notebook_CU.ipynb
+++ b/dataproject/Offer/Aflevering 1_Notebook_CU.ipynb
@@ -5,7 +5,74 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf\n",
+    "\n",
+    "from pandas import DataFrame as df\n",
+    "from scipy.stats import trim_mean, kurtosis\n",
+    "from scipy.stats.mstats import mode, gmean, hmean\n",
+    "os.chdir(\"/Users/LasseLindberg/Desktop/OneDrive - Københavns Universitet/Københavnsuniversitet/Økonomi/Kandidat/8. Semester/Introduction to programming and numerical analysis/projects-2019-ccl/dataproject/Dataset/atp-matches-dataset/\")\n",
+    "\n",
+    "#hvis filen vi danner i forvejen findes slettes den så der kan køres en ny\n",
+    "if os.path.exists(\"Tennis_mod.csv\"):\n",
+    "    os.remove(\"Tennis_mod.csv\")\n",
+    "else:\n",
+    "    print('File does not exists')\n",
+    "\n",
+    "#alle filer med format csv medtages og samles i tennis_total\n",
+    "extension = 'csv'\n",
+    "all_filenames = [i for i in glob.glob('*.{}'.format(extension))]\n",
+    "Tennis_total = pd.concat([pd.read_csv(f) for f in all_filenames ])\n",
+    "\n",
+    "#Vælger hvilke kolonner i tennis_total vi vil have med og danner det endelige dataset Tennis_mod\n",
+    "keep_col = ['tourney_id','tourney_name','surface','draw_size','winner_ht', 'winner_age', 'winner_rank', 'winner_rank_points'] \n",
+    "Tennis_mod=Tennis_total[keep_col]\n",
+    "\n",
+    "filter = Tennis_mod[\"tourney_id\"] != \"\"\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"tourney_name\"] != \"\"\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"surface\"] != \"\"\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"draw_size\"] != 0\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"winner_ht\"] != 0\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"winner_age\"] != 0\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"winner_rank\"] != 0\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "filter = Tennis_mod[\"winner_rank_points\"] != 0\n",
+    "Tennis_mod = Tennis_mod[filter]\n",
+    "\n",
+    "\n",
+    "\n",
+    "#Laver tennis_mod til csv som gemmes i samme mappe med stien\n",
+    "Tennis_mod.to_csv( \"Tennis_mod.csv\", index=False, encoding='utf-8-sig')\n",
+    "\n",
+    "\n",
+    "#et stk. printet samlet tabel\n",
+    "print(Tennis_mod)\n",
+    "\n",
+    "#et stk. deskriptiv analyse\n",
+    "DataDescribe=Tennis_mod.describe()\n",
+    "print(DataDescribe)\n",
+    "\n",
+    "#et stk. OLS\n",
+    "results = smf.ols('winner_rank ~ winner_age + winner_ht', data=Tennis_mod).fit()\n",
+    "print(results.summary())\n",
+    "\n",
+    "#et stk. plot\n",
+    "plt.style.use('seaborn')\n",
+    "Tennis_mod.plot(x='winner_rank_points', y='winner_rank', kind='scatter')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
