--- a/dataproject/CO/Aflevering 1_Notebook_CO.ipynb
+++ b/dataproject/CO/Aflevering 1_Notebook_CO.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CO klade"
+    "# CO klade 123"
    ]
   },
   {
@@ -16,7 +16,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File does not exists\n",
       "     tourney_id     tourney_name surface draw_size  winner_ht  winner_age  \\\n",
       "0      2008-338           Sydney    Hard        32      185.0   21.555099   \n",
       "1      2008-338           Sydney    Hard        32      185.0   25.070500   \n",
@@ -158,8 +157,8 @@
       "Dep. Variable:            winner_rank   R-squared:                       0.005\n",
       "Model:                            OLS   Adj. R-squared:                  0.005\n",
       "Method:                 Least Squares   F-statistic:                     111.5\n",
-      "Date:                Tue, 26 Mar 2019   Prob (F-statistic):           5.09e-49\n",
-      "Time:                        17:18:17   Log-Likelihood:            -2.5709e+05\n",
+      "Date:                Tue, 02 Apr 2019   Prob (F-statistic):           5.09e-49\n",
+      "Time:                        21:54:12   Log-Likelihood:            -2.5709e+05\n",
       "No. Observations:               45799   AIC:                         5.142e+05\n",
       "Df Residuals:                   45796   BIC:                         5.142e+05\n",
       "Df Model:                           2                                         \n",
