--- a/dataproject/CO/Aflevering 1_Notebook_CO.ipynb
+++ b/dataproject/CO/Aflevering 1_Notebook_CO.ipynb
@@ -271,6 +271,136 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>winner_ht</th>\n",
+       "      <th>winner_age</th>\n",
+       "      <th>winner_rank</th>\n",
+       "      <th>winner_rank_points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>46403.00</td>\n",
+       "      <td>47248.00</td>\n",
+       "      <td>46642.00</td>\n",
+       "      <td>46642.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>175.62</td>\n",
+       "      <td>27.31</td>\n",
+       "      <td>57.92</td>\n",
+       "      <td>1473.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>42.05</td>\n",
+       "      <td>7.81</td>\n",
+       "      <td>71.09</td>\n",
+       "      <td>1922.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>180.00</td>\n",
+       "      <td>23.59</td>\n",
+       "      <td>18.00</td>\n",
+       "      <td>525.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>185.00</td>\n",
+       "      <td>26.18</td>\n",
+       "      <td>41.00</td>\n",
+       "      <td>880.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>190.00</td>\n",
+       "      <td>28.93</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>1575.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>208.00</td>\n",
+       "      <td>147.00</td>\n",
+       "      <td>1890.00</td>\n",
+       "      <td>15785.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       winner_ht  winner_age  winner_rank  winner_rank_points\n",
+       "count   46403.00    47248.00     46642.00            46642.00\n",
+       "mean      175.62       27.31        57.92             1473.36\n",
+       "std        42.05        7.81        71.09             1922.59\n",
+       "min         1.00        4.00         1.00                1.00\n",
+       "25%       180.00       23.59        18.00              525.00\n",
+       "50%       185.00       26.18        41.00              880.00\n",
+       "75%       190.00       28.93        75.00             1575.00\n",
+       "max       208.00      147.00      1890.00            15785.00"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Table that that round to two decimals\n",
+    "DataDescribe=Tennis_mod.describe()\n",
+    "DataDescribe.round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
