--- a/dataproject/CO/Aflevering 1_Notebook_CO.ipynb
+++ b/dataproject/CO/Aflevering 1_Notebook_CO.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "max       208.00      147.00      1890.00            15785.00"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,6 +386,26 @@
     "#Table that that round to two decimals\n",
     "DataDescribe=Tennis_mod.describe()\n",
     "DataDescribe.round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Table Title'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'table title'.title()"
    ]
   },
   {
